--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,6 +11,7 @@ openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=Ok
 
 # Invoice List
+searchFieldPlaceholder=Type part of name for search
 invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
@@ -21,7 +22,16 @@ columnSupplier=Supplier
 columnStatus=Status
 columnPrice=Price
 
+#Overview Page
+Overview_rootLabel=Overview Page
+Overview_headerLabel=Header
+Overview_contentLabel=Page Content
+
 # Detail Page
+ratingTitle=Rate the Product
+Detail_rootLabel=Detail Page
+Detail_headerLabel=Header
+Detail_contentLabel=Page Content
 detailPageTitle=Walkthrough - Details
 ratingConfirmation=You have rated this product with {0} stars
 dateTitle=Order date
