--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -42,3 +42,7 @@ productRatingLabelInitial=Please rate this product
 productRatingLabelIndicator=Your rating: {0} out of {1}
 productRatingLabelFinal=Thank you for your rating!
 productRatingButton=Rate
+ratingIndicatorLabel=Rating indicator
+ratingIndicatorDescription=Select rating for current product
+rateButtonLabel=Submit rating button
+rateButtonDescription=Press to submit selected rating for current product
